tests/test_assets/semantic/valid/expressions/arithmetic_left_literal_boundaries.cog
test_left_literal_boundaries::(
    value_u8: u8,
    value_i8: i8
) -> void {
    0 + value_u8;
    255 - value_u8;

    127 + value_i8;
    -128 - value_i8;
}
