tests/test_assets/semantic/invalid/expressions/arithmetic_left_literal_out_of_range.cog
test_left_literal_range::(
    value_u8: u8,
    value_i8: i8
) -> void {
    256 + value_u8;
    256 - value_u8;

    128 + value_i8;
    -129 - value_i8;
}
